--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "react": "^16.8.5",
-    "react-dom": "^16.8.5"
+    "react-dom": "^16.8.5",
+    "react-redux": "^6.0.1",
+    "react-spinners": "^0.5.3",
+    "redux": "^4.0.1",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
