--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-redux": "^6.0.1",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-spinners": "^0.5.3",
     "redux": "^4.0.1",
     "styled-components": "^4.2.0"
